--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <Title>Berliner Home</Title>
     <link rel="stylesheet" type="text/css" href="main_index.css">
     <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy&display=swap" rel="stylesheet">
+        <script src="p5.js"></script>
+        <script src="sketch.js"></script>
 </head>
 <p id="head"> Michael Berliner </p>
         
