--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
 <a href="Poem_Activity/index.html"> Poem</a>
     <a href="DrawingApp/index.html"> Drawing App</a>
     <a href="Clock/index.html"> Clock </a>
+    <a href="Photography/index.html"> Photography </a>
 </div>
         
