--- a/Photography/index.html
+++ b/Photography/index.html
@@ -32,4 +32,22 @@
 
 <img src="Portrait9.jpg" style="width:350px;height:234.25px;"class="centerTen">
 
-<img src="Portrait10.jpg" style="width:350px;height:234.25px;"class="centerEleven">
+<img src="Portrait10.jpg" style="width:334.75px;height:500px;"class="centerEleven">
+     
+<img src="Portrait11.jpg" style="width:334.75px;height:500px;"class="centerTwelve">
+
+<img src="Portrait12.jpg" style="width:334.75px;height:500px;"class="centerThirt">
+
+<img src="Portrait13.jpg" style="width:334.75px;height:500px;"class="centerFourth">
+
+<img src="Portrait14.jpg" style="width:350px;height:234.25px;"class="centerFifth">
+
+<img src="Portrait15.jpg" style="width:350px;height:234.25px;"class="centerSixth">
+     
+<img src="Portrait16.jpg" style="width:350px;height:234.25px;"class="centerSeventh">
+
+<img src="Portrait17.jpg" style="width:350px;height:234.25px;"class="centerEighth">
+
+<img src="Portrait18.jpg" style="width:350px;height:234.25px;"class="centerNinth">
+
+<img src="Portrait19.jpg" style="width:350px;height:234.25px;"class="centerTwenty">
