--- a/Photography/index.html
+++ b/Photography/index.html
@@ -1,7 +1,7 @@
 <! DOCTYPE html>
  <html>
      <div class="background">
-<script src="sketch.js"style="width:100%;height:10,000px;position: fixed;"></script>
+<script src="sketch.js"style="width:100%;height:100%;"></script>
  </div>
 
 <head>
