--- a/Photography/index.html
+++ b/Photography/index.html
@@ -1,8 +1,8 @@
 <! DOCTYPE html>
  <html>
-     <div class="background">
-<script src="sketch.js"style="width:100%;height:100%;"></script>
- </div>
+ 
+<script src="sketch.js" ></script>
+
 
 <head>
     <Title>Photography</Title>
