--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="main_index.css">
     <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy&display=swap" rel="stylesheet">
        <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
-    <script src="sketch.js"></script>
+
         
 </head>
 <p id="head"> Michael Berliner </p>
@@ -14,14 +14,7 @@
 <div class=b>
 <a href="index.html">Home </a>
 <a href="manfesto/manifesto.html"> Manifesto</a>
-<a href="CSS-Painting/index.html"> CSS Painting</a>
-
 <a href="manfesto/Q&A.html"> About Me</a>
-</div>
-        <div class=c>
-<a href="Poem_Activity/index.html"> Poem</a>
-    <a href="DrawingApp/index.html"> Drawing App</a>
-    <a href="Clock/index.html"> Clock </a>
-    <a href="Photography/index.html"> Photography </a>
+<a href="Projects/index.html"> Projects </a>
 </div>
         
