--- a/Projects/Photography/index.html
+++ b/Projects/Photography/index.html
@@ -9,6 +9,6 @@
 </head>
 
 
-<img src="Portrait.jpg" style="width:866.25px;height:579.76875px;"class="centerOne">
+<img src="Portrait.jpg" style="width:60vw;height:40vw;"class="centerOne">
 
 </html>
