--- a/Projects/Photography/index.html
+++ b/Projects/Photography/index.html
@@ -12,7 +12,7 @@
 <img src="Portrait.jpg" style="width:60vw;height:40vw;"class="centerOne">
         
 <a href="index_2.html">
-<img src="NextButton.png">       
+<img src="NextButton.png" style="width: 80px; height: 80px;">       
 </a>
         
 </html>
