--- a/Projects/Photography/index.html
+++ b/Projects/Photography/index.html
@@ -12,8 +12,7 @@
 
 <img src="Portrait.jpg" style="width:60vw;height:40vw;"class="centerOne">
         <a href="index_2.html">
-<img src="NextButton.png" style="width: 2vw; height: 2vw;">       
-</a>
+<img src="NextButton.png" style="width: 8vw; height: 8vw;"class="buttonRight">       </a>
         
 
         
