--- a/Projects/Photography/index.html
+++ b/Projects/Photography/index.html
@@ -7,7 +7,8 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
     
 </head>
-        
+  
+<img src="buttonBlank.png"style="width: 15vw; height: 18vw;"class="buttonLeft">
 
 
 <img src="Portrait.jpg" style="width:60vw;height:40vw;"class="centerOne">
