--- a/Projects/index.html
+++ b/Projects/index.html
@@ -15,7 +15,7 @@
 
 
      <a href="Design/index.html">Design </a>
-     <a href="Drawing/index.html">Drawing </a>
-     <a href="Painting/index.html">Painting </a>
+     <a href="/index.html">Home </a>
+     
 </div>
 </html>
