--- a/Projects/Design/index.html
+++ b/Projects/Design/index.html
@@ -11,10 +11,11 @@
 </head>
      
 <div class="b">
+      <a href="/Projects/index.html">
+         Projects </a>
      <a href="/DrawingApp/index.html">
          Drawing App </a>
-
-
+     <a href="/Processing/index.html">Processing </a>
      <a href="/CSS-Painting/index.html">Painting </a>
      <a href="/Clock/index.html">Clock </a>
      <a href="/Poem_Activity/index.html">Poem </a>
