--- a/Processing/index.html
+++ b/Processing/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <Title>Processing</Title>
-    <link rel="stylesheet" type="text/css" href="">
+    <link rel="stylesheet" type="text/css" href="main.css">
     <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script> 
 </head>
         
