--- a/manfesto/manifesto.html
+++ b/manfesto/manifesto.html
@@ -27,5 +27,5 @@
     </ul>
     <p id="lineEight">I hope you enjoyed this little practice</p>
     <p id="lineNine">More designing to come</p>
-  <span><p class="a"><a href="../index.html"> Back to home</a></p></span>
+  <p class="a"><a href="../index.html"> Back to home</a></p>
 </body></html>
