--- a/Poem_Activity/index.html
+++ b/Poem_Activity/index.html
@@ -63,4 +63,8 @@
     <p id="lineTwentyFour"> No Hector or Achilles had. All this </p>
     <p id="lineTwentyFive"> God does, who’s guiding her. </p>
 </div>
+        
+        <div class="SVG">
+        <img src="Poem_Graphic_Final.png" style="width: 90vw; height: 43vw;z-index: -1;margin-top: -200px;">
+        </div>
 </html>
