--- a/Projects/Design/index.html
+++ b/Projects/Design/index.html
@@ -15,6 +15,7 @@
          Projects </a>
      <a href="/DrawingApp/index.html">
          Drawing App </a>
+    <a href="index_2.html">Infographic</a>
      <a href="/Processing/index.html">Processing </a>
      <a href="/CSS-Painting/index.html">Painting </a>
      <a href="/Clock/index.html">Clock </a>
