--- a/Projects/Design/index_2.html
+++ b/Projects/Design/index_2.html
@@ -5,6 +5,8 @@
     <Title>Quarantine Inforgraphic</Title>
     <link rel="stylesheet" type="text/css" href="main_2.css">
        <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
-       <script src="sketch_2.js" type="text/javascript" style="width: 30vw; height: 20vw;"></script>
+       <script src="sketch_2.js" type="text/javascript" style="width: 40vw; height: 30vw;"></script>
 
 </head>
+        
+</html>        
