--- a/Poem_Activity/index.html
+++ b/Poem_Activity/index.html
@@ -2,7 +2,7 @@
     <html>
 
     <head>
-    <Title>Joan of Arc</Title>
+    <Title>Joan of Arc Poem</Title>
     <link rel="stylesheet" type="text/css" href="../Poem_Activity/main.css">
 </head>
 
