--- a/DrawingApp/index.html
+++ b/DrawingApp/index.html
@@ -2,6 +2,7 @@
     <html>
 
     <head>
+        <title>Draw and Screenshot</title>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
     <script src="sketch.js"></script>
 </head>
