--- a/Projects/Design/index.html
+++ b/Projects/Design/index.html
@@ -3,7 +3,7 @@
 
    
 <head>
-    <Title>Projects Page</Title>
+    <Title>Michael's Design</Title>
     <link rel="stylesheet" type="text/css" href="main.css">
     <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
