--- a/Projects/Design/index_3.html
+++ b/Projects/Design/index_3.html
@@ -3,6 +3,7 @@
 
     <head>
         <title>Clock</title>
+            <link rel="stylesheet" type="text/css" href="main_2.css">
         <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
         <script src="sketch3.js"></script>
     </head>
@@ -16,5 +17,6 @@
             z-index: -1;
         }
         </style>
+      <a href="index.html">###</a>
         
 </html>
