--- a/Design/index.html
+++ b/Design/index.html
@@ -7,18 +7,18 @@
     <link rel="stylesheet" type="text/css" href="main.css">
     <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
-    <script src="sketch.js" ></script>     
+    <script src="sketch.js" type="text/javascript"></script>     
 </head>
      
 <div class="b">
-      <a href="/Projects/index.html">
+      <a href="../Projects/index.html">
          Projects </a>
-     <a href="/DrawingApp/index.html">
+     <a href="../DrawingApp/index.html">
          Drawing App </a>
     <a href="index_2.html">Infographic</a>
-     <a href="/Processing/index.html">Processing </a>
-     <a href="/CSS-Painting/index.html">Painting </a>
+     <a href="../Processing/index.html">Processing </a>
+     <a href="../CSS-Painting/index.html">Painting </a>
      <a href="index_3.html">Clock </a>
-     <a href="/Poem_Activity/index.html">Poem </a>
+     <a href="../Poem_Activity/index.html">Poem </a>
 </div>
 </html>
