--- a/Poem_Activity/index.html
+++ b/Poem_Activity/index.html
@@ -3,7 +3,7 @@
 
     <head>
     <Title>Joan of Arc Poem</Title>
-    <link rel="stylesheet" type="text/css" href="../Poem_Activity/main.css">
+    <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
 <p id="head"> Joan of Arc </p>
