--- a/Design/index_3.html
+++ b/Design/index_3.html
@@ -4,7 +4,7 @@
     <head>
         <title>Clock</title>
         <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
-         <script src="sketch3.js" class="background" style="z-index: -1;"></script>
+         <script src="sketch3.js" type="text/javascript" class="background" style="z-index: -1;"></script>
 
     </head>
       
