--- a/DrawingApp/index.html
+++ b/DrawingApp/index.html
@@ -4,7 +4,7 @@
     <head>
         <title>Draw and Screenshot</title>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
-    <script src="sketch.js"></script>
+    <script src="sketch.js" type="text/javascript"></script>
 </head>
 <style>
     canvas {
