--- a/Projects/index.html
+++ b/Projects/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" type="text/css" href="main.css">
     <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
-    <script src="sketch.js" ></script>     
+    <script src="sketch.js" type="text/javascript" ></script>     
 </head>
      
 <div class="b">
-     <a href="Photography/index.html">Photography </a>
-     <a href="Design/index.html">Design </a>
+     <a href="../Photography/index.html">Photography </a>
+     <a href="../Design/index.html">Design </a>
      <a href="/index.html">Home </a>
      
 </div>
