--- a/Design/index.html
+++ b/Design/index.html
@@ -18,7 +18,7 @@
     <a href="index_2.html">Infographic</a>
      <a href="../Processing/index.html">Processing </a>
      <a href="../CSS-Painting/index.html">Painting </a>
-     <a href="index_3.html">Clock </a>
+     <a href="../Clock/index_3.html">Clock </a>
      <a href="../Poem_Activity/index.html">Poem </a>
 </div>
 </html>
