--- a/Clock/index_3.html
+++ b/Clock/index_3.html
@@ -2,18 +2,10 @@
     <html>
 
     <head>
+        <title>Clock</title>
         <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
-        <script src="sketch3.js"></script>
+        <script src="sketch3.js"type="text/javascript"></script>
     </head>
-        <style>
-            canvas {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 10%;
-            height: 100%;
-            z-index: -1;
-        }
-        </style>
+       
         
 </html>
