--- a/Clock/index_3.html
+++ b/Clock/index_3.html
@@ -1,10 +1,10 @@
 <! DOCTYPE html>
     <html>
-
+    <title>Clock</title>
     <head>
-        <title>Clock</title>
+        <link rel="stylesheet" type="text/css" href="main.css">
         <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
-        <script src="sketch3.js"type="text/javascript"></script>
+        <script src="sketch3.js"type="text/javascript"style="margin: -7px;"></script>
     </head>
        
         
