--- a/Photography/index_11.html
+++ b/Photography/index_11.html
@@ -11,7 +11,7 @@
 <img src="BackButton.png"style="width: 15vw; height: 18vw;"class="buttonLeft">   
 </a> 
 <img src="Portrait19.jpg"style="width:60vw;height:40vw;"class="centerOne">
-<a href="/Projects/index.html">
+<a href="../Projects/index.html">
 <img src="NextButton.png" style="width: 15vw; height: 18vw;"class="buttonRight">   </a>  
         
 </html>  
