--- a/Processing/index_6.html
+++ b/Processing/index_6.html
@@ -12,6 +12,6 @@
         
 <img src="Sketch6.jpg" style="width:50vw;height:50vw;"class="centerOne">
        
-<a href="/Projects/Design/index.html">
+<a href="../Projects/Design/index.html">
 <img src="NextButton.png" style="width: 15vw; height: 18vw;"class="buttonRight">   </a>          
 </html>
