--- a/Processing/index_6.html
+++ b/Processing/index_6.html
@@ -2,7 +2,7 @@
     <html>
 
 <head>
-    <Title>Processing</Title>
+    <Title>Processing Prints</Title>
     <link rel="stylesheet" type="text/css" href="main.css">
     <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script> 
 </head>
