--- a/DrawingApp/index.html
+++ b/DrawingApp/index.html
@@ -2,7 +2,7 @@
     <html>
 
     <head>
-        <title>Draw and Screenshot</title>
+        <title>Draw with Mouse(press and unpress), Use Keys Too(especially 1 and 2: Color Change)</title>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
     <script src="sketch.js" type="text/javascript"></script>
 </head>
