--- a/Design/index.html
+++ b/Design/index.html
@@ -16,6 +16,7 @@
      <a href="../DrawingApp/index.html">
          Drawing App </a>
     <a href="index_2.html">Infographic</a>
+    <a href="../DataVisual/index.html">Data Visual</a>
      <a href="../Processing/index.html">Processing </a>
      <a href="../CSS-Painting/index.html">Painting </a>
      <a href="../Clock/index_3.html">Clock </a>
